lab-1 task-3 classification visualisation

--- a/notebooks/1_preprocessing.ipynb
+++ b/notebooks/1_preprocessing.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "id": "0255a656",
    "metadata": {},
    "outputs": [],
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 3,
    "id": "434843c0",
    "metadata": {},
    "outputs": [],
@@ -640,6 +640,204 @@
    ],
    "source": [
     "music_genre.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "f105ead4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>instance_id</th>\n",
+       "      <th>popularity</th>\n",
+       "      <th>acousticness</th>\n",
+       "      <th>danceability</th>\n",
+       "      <th>duration_ms</th>\n",
+       "      <th>energy</th>\n",
+       "      <th>instrumentalness</th>\n",
+       "      <th>liveness</th>\n",
+       "      <th>loudness</th>\n",
+       "      <th>speechiness</th>\n",
+       "      <th>valence</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>50000.000000</td>\n",
+       "      <td>50000.000000</td>\n",
+       "      <td>50000.000000</td>\n",
+       "      <td>50000.000000</td>\n",
+       "      <td>5.000000e+04</td>\n",
+       "      <td>50000.000000</td>\n",
+       "      <td>50000.000000</td>\n",
+       "      <td>50000.000000</td>\n",
+       "      <td>50000.000000</td>\n",
+       "      <td>50000.000000</td>\n",
+       "      <td>50000.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>55888.396360</td>\n",
+       "      <td>44.220420</td>\n",
+       "      <td>0.306383</td>\n",
+       "      <td>0.558241</td>\n",
+       "      <td>2.212526e+05</td>\n",
+       "      <td>0.599755</td>\n",
+       "      <td>0.181601</td>\n",
+       "      <td>0.193896</td>\n",
+       "      <td>-9.133761</td>\n",
+       "      <td>0.093586</td>\n",
+       "      <td>0.456264</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>20725.256253</td>\n",
+       "      <td>15.542008</td>\n",
+       "      <td>0.341340</td>\n",
+       "      <td>0.178632</td>\n",
+       "      <td>1.286720e+05</td>\n",
+       "      <td>0.264559</td>\n",
+       "      <td>0.325409</td>\n",
+       "      <td>0.161637</td>\n",
+       "      <td>6.162990</td>\n",
+       "      <td>0.101373</td>\n",
+       "      <td>0.247119</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>20002.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.059600</td>\n",
+       "      <td>-1.000000e+00</td>\n",
+       "      <td>0.000792</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.009670</td>\n",
+       "      <td>-47.046000</td>\n",
+       "      <td>0.022300</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>37973.500000</td>\n",
+       "      <td>34.000000</td>\n",
+       "      <td>0.020000</td>\n",
+       "      <td>0.442000</td>\n",
+       "      <td>1.748000e+05</td>\n",
+       "      <td>0.433000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.096900</td>\n",
+       "      <td>-10.860000</td>\n",
+       "      <td>0.036100</td>\n",
+       "      <td>0.257000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>55913.500000</td>\n",
+       "      <td>45.000000</td>\n",
+       "      <td>0.144000</td>\n",
+       "      <td>0.568000</td>\n",
+       "      <td>2.192810e+05</td>\n",
+       "      <td>0.643000</td>\n",
+       "      <td>0.000158</td>\n",
+       "      <td>0.126000</td>\n",
+       "      <td>-7.276500</td>\n",
+       "      <td>0.048900</td>\n",
+       "      <td>0.448000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>73863.250000</td>\n",
+       "      <td>56.000000</td>\n",
+       "      <td>0.552000</td>\n",
+       "      <td>0.687000</td>\n",
+       "      <td>2.686122e+05</td>\n",
+       "      <td>0.815000</td>\n",
+       "      <td>0.155000</td>\n",
+       "      <td>0.244000</td>\n",
+       "      <td>-5.173000</td>\n",
+       "      <td>0.098525</td>\n",
+       "      <td>0.648000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>91759.000000</td>\n",
+       "      <td>99.000000</td>\n",
+       "      <td>0.996000</td>\n",
+       "      <td>0.986000</td>\n",
+       "      <td>4.830606e+06</td>\n",
+       "      <td>0.999000</td>\n",
+       "      <td>0.996000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>3.744000</td>\n",
+       "      <td>0.942000</td>\n",
+       "      <td>0.992000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        instance_id    popularity  acousticness  danceability   duration_ms  \\\n",
+       "count  50000.000000  50000.000000  50000.000000  50000.000000  5.000000e+04   \n",
+       "mean   55888.396360     44.220420      0.306383      0.558241  2.212526e+05   \n",
+       "std    20725.256253     15.542008      0.341340      0.178632  1.286720e+05   \n",
+       "min    20002.000000      0.000000      0.000000      0.059600 -1.000000e+00   \n",
+       "25%    37973.500000     34.000000      0.020000      0.442000  1.748000e+05   \n",
+       "50%    55913.500000     45.000000      0.144000      0.568000  2.192810e+05   \n",
+       "75%    73863.250000     56.000000      0.552000      0.687000  2.686122e+05   \n",
+       "max    91759.000000     99.000000      0.996000      0.986000  4.830606e+06   \n",
+       "\n",
+       "             energy  instrumentalness      liveness      loudness  \\\n",
+       "count  50000.000000      50000.000000  50000.000000  50000.000000   \n",
+       "mean       0.599755          0.181601      0.193896     -9.133761   \n",
+       "std        0.264559          0.325409      0.161637      6.162990   \n",
+       "min        0.000792          0.000000      0.009670    -47.046000   \n",
+       "25%        0.433000          0.000000      0.096900    -10.860000   \n",
+       "50%        0.643000          0.000158      0.126000     -7.276500   \n",
+       "75%        0.815000          0.155000      0.244000     -5.173000   \n",
+       "max        0.999000          0.996000      1.000000      3.744000   \n",
+       "\n",
+       "        speechiness       valence  \n",
+       "count  50000.000000  50000.000000  \n",
+       "mean       0.093586      0.456264  \n",
+       "std        0.101373      0.247119  \n",
+       "min        0.022300      0.000000  \n",
+       "25%        0.036100      0.257000  \n",
+       "50%        0.048900      0.448000  \n",
+       "75%        0.098525      0.648000  \n",
+       "max        0.942000      0.992000  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "music_genre.describe()"
    ]
   },
   {
