lab-3 task-2 LR

--- a/notebooks/3_regression.ipynb
+++ b/notebooks/3_regression.ipynb
@@ -455,7 +455,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def print_metrics(*metrics, names = [\"R2\", \"MSE\", \"RMSE\", \"MAE\"]):\n",
+    "def print_metrics(metrics, names = [\"R2\", \"MSE\", \"RMSE\", \"MAE\"]):\n",
     "    for i, m in enumerate(metrics):\n",
     "        print(f'{names[i]} metric\\nmean: {-mean(m)}\\nstd: {std(m)}\\n')"
    ]
@@ -518,7 +518,7 @@
     }
    ],
    "source": [
-    "print_metrics(*scores)"
+    "print_metrics(scores)"
    ]
   },
   {
@@ -589,8 +589,8 @@
      "output_type": "stream",
      "text": [
       "R2 metric\n",
-      "mean: 0.06952939913395266\n",
-      "std: 0.060023945806815165\n",
+      "mean: 0.0695293991339527\n",
+      "std: 0.060023945806815235\n",
       "\n",
       "MSE metric\n",
       "mean: 4283.796688660224\n",
@@ -598,17 +598,17 @@
       "\n",
       "RMSE metric\n",
       "mean: 54.4112016737566\n",
-      "std: 36.37606109899767\n",
+      "std: 36.376061098997674\n",
       "\n",
       "MAE metric\n",
-      "mean: 18.035167716595208\n",
+      "mean: 18.035167716595204\n",
       "std: 6.233327979450484\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "print_metrics(*scores)"
+    "print_metrics(scores)"
    ]
   },
   {
@@ -695,7 +695,7 @@
     }
    ],
    "source": [
-    "print_metrics(*scores)"
+    "print_metrics(scores)"
    ]
   },
   {
@@ -782,7 +782,7 @@
     }
    ],
    "source": [
-    "print_metrics(*scores)"
+    "print_metrics(scores)"
    ]
   },
   {
@@ -870,7 +870,7 @@
     }
    ],
    "source": [
-    "print_metrics(*scores)"
+    "print_metrics(scores)"
    ]
   },
   {
@@ -897,7 +897,7 @@
    "outputs": [],
    "source": [
     "from sys import path\n",
-    "path.insert(0, r\"C:\\Users\\DELL\\Desktop\\ML-FIT-201\\ML-FIT-201\\modules\")"
+    "path.insert(0, r\"..\\modules\")"
    ]
   },
   {
@@ -913,59 +913,105 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "669ea668",
+   "id": "9aec9016",
    "metadata": {},
    "outputs": [],
    "source": [
-    "lr = LR(5)"
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=0)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "612f5f51",
+   "id": "6240eafe",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "lr.arg"
+    "model = LR()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "faf0c8bf",
+   "id": "d562277a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "39d8ece0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "f8e1aca9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import r2_score, mean_squared_error, mean_absolute_error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "46b15eb6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scores = list()\n",
+    "scores.append(r2_score(np.array(y_test), np.array(y_pred)))\n",
+    "scores.append(mean_squared_error(np.array(y_test), np.array(y_pred), squared=True))\n",
+    "scores.append(mean_squared_error(np.array(y_test), np.array(y_pred), squared=False))\n",
+    "scores.append(mean_absolute_error(np.array(y_test), np.array(y_pred)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "befa8e46",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R2 metric\n",
+      "mean: 0.5135970406107357\n",
+      "std: 0.0\n",
+      "\n",
+      "MSE metric\n",
+      "mean: -1276.9080417337123\n",
+      "std: 0.0\n",
+      "\n",
+      "RMSE metric\n",
+      "mean: -35.73385008271166\n",
+      "std: 0.0\n",
+      "\n",
+      "MAE metric\n",
+      "mean: -20.38971762608918\n",
+      "std: 0.0\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "lr.test()"
+    "print_metrics(scores)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1aca8f6",
+   "id": "e12cb2bb",
    "metadata": {},
    "outputs": [],
    "source": []
