lab-2 task-2 modules fix

--- a/notebooks/2_classification.ipynb
+++ b/notebooks/2_classification.ipynb
@@ -1378,6 +1378,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8f5dc53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sys import path\n",
+    "path.insert(0, r\"..\\modules\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "b8588ac2",
    "metadata": {},
@@ -1392,7 +1403,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from modules.classification_models import KNN"
+    "from classification_models import KNN"
    ]
   },
   {
@@ -1476,7 +1487,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from modules.classification_models import DTC"
+    "from classification_models import DTC"
    ]
   },
   {
@@ -1561,7 +1572,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from modules.classification_models import NB"
+    "from classification_models import NB"
    ]
   },
   {
