lab-3 task-2 DTR

--- a/notebooks/3_regression.ipynb
+++ b/notebooks/3_regression.ipynb
@@ -589,8 +589,8 @@
      "output_type": "stream",
      "text": [
       "R2 metric\n",
-      "mean: 0.0695293991339527\n",
-      "std: 0.060023945806815235\n",
+      "mean: 0.0695293991339528\n",
+      "std: 0.06002394580681519\n",
       "\n",
       "MSE metric\n",
       "mean: 4283.796688660224\n",
@@ -903,17 +903,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "81e474fd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from regression_models import LR"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "9aec9016",
+   "id": "90e9bed0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -923,7 +913,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
+   "id": "1465ad4d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import r2_score, mean_squared_error, mean_absolute_error"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1024eee7",
+   "metadata": {},
+   "source": [
+    "### LR — Linear Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "81e474fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from regression_models import LR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "id": "6240eafe",
    "metadata": {},
    "outputs": [],
@@ -933,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 43,
    "id": "d562277a",
    "metadata": {},
    "outputs": [],
@@ -943,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 44,
    "id": "39d8ece0",
    "metadata": {},
    "outputs": [],
@@ -953,31 +971,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "f8e1aca9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.metrics import r2_score, mean_squared_error, mean_absolute_error"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 45,
    "id": "46b15eb6",
    "metadata": {},
    "outputs": [],
    "source": [
     "scores = list()\n",
     "scores.append(r2_score(np.array(y_test), np.array(y_pred)))\n",
-    "scores.append(mean_squared_error(np.array(y_test), np.array(y_pred), squared=True))\n",
-    "scores.append(mean_squared_error(np.array(y_test), np.array(y_pred), squared=False))\n",
-    "scores.append(mean_absolute_error(np.array(y_test), np.array(y_pred)))"
+    "scores.append(-mean_squared_error(np.array(y_test), np.array(y_pred), squared=True))\n",
+    "scores.append(-mean_squared_error(np.array(y_test), np.array(y_pred), squared=False))\n",
+    "scores.append(-mean_absolute_error(np.array(y_test), np.array(y_pred)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 46,
    "id": "befa8e46",
    "metadata": {},
    "outputs": [
@@ -990,15 +998,120 @@
       "std: 0.0\n",
       "\n",
       "MSE metric\n",
-      "mean: -1276.9080417337123\n",
+      "mean: 1276.9080417337123\n",
       "std: 0.0\n",
       "\n",
       "RMSE metric\n",
-      "mean: -35.73385008271166\n",
+      "mean: 35.73385008271166\n",
       "std: 0.0\n",
       "\n",
       "MAE metric\n",
-      "mean: -20.38971762608918\n",
+      "mean: 20.38971762608918\n",
+      "std: 0.0\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_metrics(scores)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "661d88ed",
+   "metadata": {},
+   "source": [
+    "### DTR — Decision Tree Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "d1255437",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from regression_models import DTR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "1f8dd6d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = DTR(mtd=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "62865ae0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_train = np.array(np.concatenate((X_train, np.mat(y_train).T), axis=1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "8802c240",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.fit(data_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "711d7469",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "a48c3e52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scores = list()\n",
+    "scores.append(r2_score(y_test, y_pred))\n",
+    "scores.append(-mean_squared_error(y_test, y_pred, squared=True))\n",
+    "scores.append(-mean_squared_error(y_test, y_pred, squared=False))\n",
+    "scores.append(-mean_absolute_error(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "7194483e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R2 metric\n",
+      "mean: 1.5459352035169442\n",
+      "std: 0.0\n",
+      "\n",
+      "MSE metric\n",
+      "mean: 2147.814145957893\n",
+      "std: 0.0\n",
+      "\n",
+      "RMSE metric\n",
+      "mean: 46.344515813177864\n",
+      "std: 0.0\n",
+      "\n",
+      "MAE metric\n",
+      "mean: 20.943297186271412\n",
       "std: 0.0\n",
       "\n"
      ]
@@ -1010,8 +1123,58 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 39,
+   "id": "fdcecef4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model2 = DTR(mtd=2)\n",
+    "model2.fit(data_train)\n",
+    "y_pred2 = model2.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "7a653e9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R2 metric\n",
+      "mean: 0.20494907086875602\n",
+      "std: 0.0\n",
+      "\n",
+      "MSE metric\n",
+      "mean: 1016.5249516152932\n",
+      "std: 0.0\n",
+      "\n",
+      "RMSE metric\n",
+      "mean: 31.882988436081288\n",
+      "std: 0.0\n",
+      "\n",
+      "MAE metric\n",
+      "mean: 18.039497449494636\n",
+      "std: 0.0\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "scores = list()\n",
+    "scores.append(r2_score(y_test, y_pred2))\n",
+    "scores.append(-mean_squared_error(y_test, y_pred2, squared=True))\n",
+    "scores.append(-mean_squared_error(y_test, y_pred2, squared=False))\n",
+    "scores.append(-mean_absolute_error(y_test, y_pred2))\n",
+    "print_metrics(scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "e12cb2bb",
+   "id": "eb0c8517",
    "metadata": {},
    "outputs": [],
    "source": []
